8/16/10 left justify radio buttons in control panels
8/16/10 fix pH paper cursor to indicate that it can be dragged in any direction
8/16/10 adjust canvas layout
# 0.00.21 (43149) Aug 16, 2010
8/16/10 add light rays in conductivity tester (ported to Piccolo from faraday)
8/11/10 create larger battery image
8/11/10 use molecule color for "negligible" in Concentration Graph
8/11/10 center whitespace of chart in beaker
8/11/10 click on icons next to radio buttons to select radio buttons
8/11/10 many fixes to control panels to properly support Reset All
# 0.00.20 (42956) Aug 11, 2010
8/11/10 add icons for choices in Views control panel
8/11/10 add icons for choices in Tests control panel
8/11/10 shorten "Conductivity Tester" to "Conductivity" so we have room for icons
8/11/10 implement Kelly's model for mapping pH to light bulb brightness
8/11/10 make light bulb and battery larger, adjust control points on probe wires
8/11/10 allow pH paper to be dragged horizontally, so it can be held up to color key
8/11/10 remove black outline on pH paper, so it's easier to compare to color key
8/11/10 gray out View controls when "Conductivity Tester" tool is selected
8/11/10 put "Show H2O Molecules" check box under "Magnifying Glass" radio button, slightly indented
8/11/10 add symbols and icons after Solution choice names in "Test Solution" tab
8/11/10 Tools -> Tests, View -> Views
8/11/10 display model brightness value for conductivity tester in dev version only
8/11/10 pass dev flag from application to view components
8/11/10 clean up and refinements of ConductivityTesterNode
8/11/10 encapsulate all light bulb parts in one composite node
8/11/10 replace A- molecule image with one that has no "bite" out of it
8/10/10 separate tools controls into Tools and View panels
8/10/10 tweak locations of pH paper and conductivity tester
8/10/10 make pH meter, pH paper, conductivity tester all mutually exclusive
# 0.00.19 (42894) Aug 10, 2010
8/10/10 use black line for titled borders